--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,6 +34,6 @@ jobs:
       run: dotnet publish --configuration Release --output ./published
 
 
-    - name: Deploy to server (ejemplo de despliegue)
-      run: |
-        scp -r ./published username@server:/path/to/deploy
+    #- name: Deploy to server (ejemplo de despliegue)
+     # run: |
+      #  scp -r ./published username@server:/path/to/deploy
