Se bajo a la version 6

--- a/Web_Franco/appsettings.json
+++ b/Web_Franco/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DomainUrls": {
+    "WEB_URL": "http://drenyer-001-site1.jtempurl.com"
+  }
 }
